--- a/dest/pc.html
+++ b/dest/pc.html
@@ -25,5 +25,5 @@
 </head>
 <body>
 </body>
-<script type="text/javascript" main-js="" src="./deploy/index.entry.js"></script>
+<script type="text/javascript" main-js="" src="./deploy/index_pc.entry.js"></script>
 </html>
